# wildebeest

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.inc  README.md  pmgen.py
.github/workflows/: .build.yml.swp  build.yml  daily.yml
ARCHITECTURE/: CMakeLists.txt
ARCHITECTURE/Z1010/BRAM/: tech_bram.v  techmap.v
ARCHITECTURE/Z1010/DSP/: DSP48_sim.v  bare_mult_tech_dsp.v  dsp_CREG.pmg  dsp_CREG_pm.h  dsp_cascade.pmg  dsp_cascade_pm.h  zeroasic_dsp.pmg  zeroasic_dsp_map.v  zeroasic_dsp_map_mode.v
SRC/: CMakeLists.txt  clk_domains.cc  clk_domains.d  cp.cc  dsp.cc  dsp.d  load_models.cc  load_models.d  obs_clean.cc  obs_clean.d  report_stat.cc  report_stat.d  synth_fpga.cc  synth_fpga.cc.bak  synth_fpga.d  time_chrono.cc  time_chrono.d  zeroasic_dsp.cc  zeroasic_dsp_noff.cc  zopt_const_dff.cc  zopt_dff.cc  zqcsat.cc
SRC/ABC_SCRIPTS/LUT4/BASIC/: area_lut4.scr  small_area_lut4.scr  tiny_area_lut4.scr
SRC/ABC_SCRIPTS/LUT4/BEST/: area_lut4.scr  delay_deepsyn_lut4.scr  delay_lut4.scr  huge_lut4.scr  small_area_lut4.scr  tiny_area_lut4.scr  tiny_delay_lut4.scr  tiny_delay_lut4.scr.bak
SRC/ABC_SCRIPTS/LUT4/V1/: area_lut4.scr  default_lut4.scr  delay_lut4.scr
SRC/ABC_SCRIPTS/LUT4/V2/: area_lut4.scr  delay_lut4.scr  small_area_lut4.scr
SRC/ABC_SCRIPTS/LUT4/V3/: delay_lut4.scr
SRC/ABC_SCRIPTS/LUT4/V4/: area_lut4.scr  delay_lut4.scr  fast_lut4.scr
SRC/ABC_SCRIPTS/LUT4/V5/: area_lut4.scr  delay_lut4.scr
SRC/ABC_SCRIPTS/LUT4/V6/: huge_lut4.scr
SRC/ABC_SCRIPTS/LUT6/BEST/: area_lut6.scr  delay_lut6.scr  fast_lut6.scr  small_area_lut6.scr  small_delay_lut6.scr
SRC/ABC_SCRIPTS/LUT6/V1/: area_lut6.scr  delay_lut6.scr  small_area_lut6.scr
SRC/ABC_SCRIPTS/LUT6/V2/: small_area_lut6.scr
SRC/ABC_SCRIPTS/LUT6/V3/: delay_lut6.scr.bak  fast_lut6.scr
SRC/ABC_SCRIPTS/LUT6/V4/: small_area_lut6.scr  small_area_lut6.scr.bak
SRC/ABC_SCRIPTS/LUT6/V6/: small_area_lut6.scr
SRC/ABC_SCRIPTS/LUT6/V7/: area_lut6.scr  small_area_lut6.scr  small_delay_lut6.scr
SRC/ABC_SCRIPTS/LUT6/V8/: delay_lut6.scr
SRC/CONFIG_FILE_EXAMPLES/: config_mae.json  config_microchip.json  config_microchip_no_pack.json  config_xc7.json
SRC/FF_MODELS/: dffenr.v  dffn.v  dffnr.v  dffnrs.v  dffrs.v  dffs.v  sdffenr.v  sdffer.v  sdffs.v  tech_flops_bb.v
SRC/Z1010/DSP/: dsp_CREG_pm.h  dsp_cascade_pm.h
architecture/: CMakeLists.txt
architecture/Z1010/bram/: memory_libmap.txt  tech_bram.v
architecture/Z1010/dsp/: zeroasic_dsp.pmg  zeroasic_dsp_map.v  zeroasic_dsp_map_mode.v  zeroasic_dsp_noff.pmg
architecture/Z1010/techlib/: tech_flops.v
architecture/Z1060/techlib/: tech_flops.v
architecture/z1000/: z1000.json
architecture/z1000/techlib/: tech_flops.v
architecture/z1010/: z1010.json
architecture/z1010/bram/: bram_memory_map.txt  bram_memory_map_with_init.txt  tech_bram_with_init.v
architecture/z1010/dsp/: mae_tech_dsp.v  tech_dsp.v  zeroasic_dsp.pmg  zeroasic_dsp_map.v  zeroasic_dsp_map_mode.v
architecture/z1010/models/: tech_mae.v
architecture/z1010/techlib/: .tech_flops.v.swp  tech_flops.v
architecture/z1060/: z1060.json
architecture/z1060/bram/: bram_memory_map.txt
architecture/z1060/dsp/: zeroasic_dsp.pmg  zeroasic_dsp_map.v  zeroasic_dsp_map_mode.v
cmake/: FindYosys.cmake  GitRevision.cmake  PMGen.cmake
pmgen/: dsp_CREG_pm.h  dsp_cascade_pm.h
src/: CMakeLists.txt  clk_domains.cc  cp.cc  load_models.cc  obs_clean.cc  report_stat.cc  report_stat.cc.bram  synth_fpga.cc  time_chrono.cc  version.h.in  zabc.cc  zeroasic_dsp.cc  zopt_const_dff.cc  zopt_dff.cc  zqcsat.cc  zqcsat.h  zsimplemap.cc  zsimplemap.h
src/abc_scripts/LUT4/BEST/: area_lut4.scr  delay_lut4.scr  fast_lut4.scr  huge_lut4.scr  small_area_lut4.scr  small_delay_lut4.scr  tiny_area_lut4.scr  tiny_delay_lut4.scr
src/abc_scripts/LUT4/V1/: fast_lut4.scr  huge_lut4.scr  small_area_lut4.scr  tiny_area_lut4.scr
src/abc_scripts/LUT4/V2/: default_lut4.scr  delay_lut4.scr  small_area_lut4.scr
src/abc_scripts/LUT4/V3/: area_lut4.scr  delay_lut4.scr
src/abc_scripts/LUT4/V4/: delay_lut4.scr  small_area_lut4.scr
src/abc_scripts/LUT4/V6/: area_lut4.scr  small_area_lut4.scr
src/abc_scripts/LUT5/BEST/: area_lut5.scr  delay_lut5.scr  fast_lut5.scr  huge_lut5.scr  small_area_lut5.scr  small_delay_lut5.scr  tiny_area_lut5.scr  tiny_delay_lut5.scr
src/abc_scripts/LUT6/BEST/: area_lut6.scr  delay_lut6.scr  (+6 more)
src/config_file_examples/: config_mae.json  config_microchip.json  config_microchip_no_pack.json  config_xc7.json
src/ff_models/: dff.v  dffeh.v  dffehl.v  dffel.v  dffen.v  dffenrs.v  dffens.v  dffes.v  dffh.v  dffhl.v  dffl.v  dffns.v  dffs.v  sdffens.v  sdffes.v  sdffnr.v  sdffns.v  sdffr.v
src/lut_models/: LUTs.v
src/ram_models/: RAM64x12.v
tests/: CMakeLists.txt
tests/unit/: check_commands.ys  heartbeat-z1000-config-abspath.ys  heartbeat-z1000-config.ys  heartbeat-z1000.ys  heartbeat-z1010-config-abspath.ys  heartbeat-z1010-config.ys  heartbeat-z1010-hardcode.ys  heartbeat-z1010.ys  heartbeat.ys  illegal_final_state_cells.ys  tiny_area_lut4.blif
tests/unit/data/: illegal_cells_config.json
tests/unit/dsp/: heaptrack.yosys.463040.zst  mae-techmap-efpga_macc.ys  mae-techmap-efpga_macc_pipe.ys  mae-techmap-efpga_macc_pipe_regi.ys  mae-techmap-efpga_macc_pipe_regi_unsigned.ys  mae-techmap-efpga_macc_pipe_unsigned.ys  mae-techmap-efpga_macc_regi.ys  mae-techmap-efpga_macc_regi_unsigned.ys  mae-techmap-efpga_macc_unsigned.ys  mae-techmap-efpga_mult.ys  mae-techmap-efpga_mult_addc.ys  mae-techmap-efpga_mult_addc_regi.ys  mae-techmap-efpga_mult_addc_regi_unsigned.ys  mae-techmap-efpga_mult_addc_regio.ys  mae-techmap-efpga_mult_addc_regio_unsigned.ys  mae-techmap-efpga_mult_addc_rego.ys  mae-techmap-efpga_mult_addc_rego_unsigned.ys  mae-techmap-efpga_mult_addc_unsigned.ys  mae-techmap-efpga_mult_regi.ys  mae-techmap-efpga_mult_regi_unsigned.ys  mae-techmap-efpga_mult_regio.ys  mae-techmap-efpga_mult_regio_unsigned.ys  mae-techmap-efpga_mult_rego.ys  mae-techmap-efpga_mult_rego_unsigned.ys  mae-techmap-efpga_mult_unsigned.ys  tiny_area_lut4.blif
utils/: README.md
(+37 files in other folders)
